# Map-Sim

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
config/: simulation.py
notebooks/: POC.ipynb  Sim_EDA.ipynb
src/: geometry.py  person.py  population.py  virus.py
