[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'map_sim_env'
version = '1.6.1'
description = 'Python dependency management and packaging made easy.'
authors = ['Marius Arlauskas']

[tool.poetry.dependencies]
python = '~3.9'

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
gif = "^23.3.0"
alive-progress = "^3.1.5"
pyarrow = "^15.0.0"


[tool.poetry.group.linting.dependencies]
ruff = '^0.0.285'
isort = '^5.12.0'
black = '^23.7.0'

[tool.poetry.group.testing.dependencies]
pytest = '^7.4.0'
coverage = '^7.3.0'
mypy = '^1.5.1'
pre-commit = '^3.3.3'

[tool.ruff]
# Read more: 'https://beta.ruff.rs/docs/rules/'
ignore = ['D104', 'D100', 'D103', 'G004', 'N999', 'I001', 'T201', 'D205', 'G003']
select = [
    'B', # flake8-bugbear
    'C4', # flake8-comprehensions
    'ERA', # flake8-eradicate/eradicate
    'PIE', # flake8-pie
    'SIM', # flake8-simplify
    'TCH', # flake8-type-checking
    'TID', # flake8-tidy-imports
    'PTH', # flake8-use-pathlib
    'ARG', # flake8-unused-arguments
    'Q', # flake8-quotes
    'PT', # flake8-pytest-style
    'T20', # flake8-print
    'G', # flake8-logging-format
    'ICN', # flake8-import-conventions
    'COM', # flake8-commas
    'A', # flake8-builtins
    'D', # pydocstyle
    'I', # isort
    'N', # pep8-naming
    'RUF', # ruff checks
    'FLY', # flynt
    'PD', # pandas-vet
]

# Exclude a variety of commonly ignored directories.
exclude = [
    '.git',
    '.gitlab',
    '.mypy_cache',
    '.pytype',
    '.ruff_cache',
    '.venv',
    '__pypackages__',
    'venv',
]

line-length = 88 # Same as Black

[tool.ruff.flake8-quotes]
docstring-quotes = 'double'
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.black]
profile = "black"
line-length = 88
skip-string-normalization = true

[tool.isort] # Making isort compatible with black
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.ruff.pydocstyle]
convention = 'google'

[tool.coverage.report]
skip_covered = true
fail_under = 80
omit = ['utils/*', 'config/*']

[tool.mypy]
ignore_missing_imports = true
exclude = ['tests', 'config']